--- a/src/html/intelligent_test_read_04.html
+++ b/src/html/intelligent_test_read_04.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
 
+
   <link rel="stylesheet" href="../css/main_xc.css">
 
 
@@ -54,9 +55,7 @@
           </ul>
           <ul class="nav navbar-nav navbar-right mu-head-user">
             <li>
-              <span>
-                <i class="fa fa-user"></i>admin</span>
-              <span>|</span>
+              <span><i class="fa fa-user"></i>admin</span><span>|</span>
             </li>
             <li>
               <a href="#">
@@ -68,6 +67,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -221,6 +221,7 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -366,6 +367,7 @@
 
 
 
+
   </div>
 
   <!-- build:js -->
@@ -382,6 +384,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
