--- a/src/html/intelligent_real_detail.html
+++ b/src/html/intelligent_real_detail.html
@@ -23,6 +23,7 @@
 
 
 
+
   <link rel="stylesheet" href="../css/main_xc.css">
 </head>
 
@@ -54,9 +55,7 @@
           </ul>
           <ul class="nav navbar-nav navbar-right mu-head-user">
             <li>
-              <span>
-                <i class="fa fa-user"></i>admin</span>
-              <span>|</span>
+              <span><i class="fa fa-user"></i>admin</span><span>|</span>
             </li>
             <li>
               <a href="#">
@@ -68,6 +67,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -216,6 +216,7 @@
       </div>
     </aside>
     <!-- endbuild -->
+
 
 
 
@@ -388,6 +389,7 @@
 
 
 
+
   </div>
   <div id="add" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" class="modal fade" style="display: none;">
     <div class="modal-dialog">
@@ -429,6 +431,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
   <script src="../js/intelligent.js"></script>
 
 
