--- a/src/html/intelligent_real_read_c04.html
+++ b/src/html/intelligent_real_read_c04.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
 
+
   <link rel="stylesheet" href="../css/main_xc.css">
 
 
@@ -54,9 +55,7 @@
           </ul>
           <ul class="nav navbar-nav navbar-right mu-head-user">
             <li>
-              <span>
-                <i class="fa fa-user"></i>admin</span>
-              <span>|</span>
+              <span><i class="fa fa-user"></i>admin</span><span>|</span>
             </li>
             <li>
               <a href="#">
@@ -68,6 +67,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -215,6 +215,7 @@
       </div>
     </aside>
     <!-- endbuild -->
+
 
 
 
@@ -478,6 +479,7 @@
 
 
 
+
   </div>
 
   <!-- build:js -->
@@ -494,6 +496,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
   <script src="../js/intelligent.js"></script>
 
 
