--- a/src/html/schoolmanagement_list.html
+++ b/src/html/schoolmanagement_list.html
@@ -307,7 +307,7 @@
                         <td>9999999</td>
                         <td>
                           <button class="btn btn-primary" data-toggle="modal" data-target="#yue">增减余额</button>
-                          <button class="btn btn-primary">课程权限</button>
+                          <button class="btn btn-primary" data-toggle="modal" data-target="#quanxian">课程权限</button>
                           <button class="btn btn-primary">停用账号</button>
                           <button class="btn btn-primary" data-toggle="modal" data-target="#edit">修改资料</button>
                           <button class="btn btn-primary jq-reset-pw">重置密码</button>
@@ -328,7 +328,7 @@
                         <td>9999999</td>
                         <td>
                           <button class="btn btn-primary" data-toggle="modal" data-target="#yue">增减余额</button>
-                          <button class="btn btn-primary">课程权限</button>
+                          <button class="btn btn-primary" data-toggle="modal" data-target="#quanxian">课程权限</button>
                           <button class="btn btn-primary">停用账号</button>
                           <button class="btn btn-primary" data-toggle="modal" data-target="#edit">修改资料</button>
                           <button class="btn btn-primary jq-reset-pw">重置密码</button>
@@ -349,7 +349,7 @@
                         <td>9999999</td>
                         <td>
                           <button class="btn btn-primary" data-toggle="modal" data-target="#yue">增减余额</button>
-                          <button class="btn btn-primary">课程权限</button>
+                          <button class="btn btn-primary" data-toggle="modal" data-target="#quanxian">课程权限</button>
                           <button class="btn btn-primary">停用账号</button>
                           <button class="btn btn-primary" data-toggle="modal" data-target="#edit">修改资料</button>
                           <button class="btn btn-primary jq-reset-pw">重置密码</button>
@@ -370,7 +370,7 @@
                         <td>9999999</td>
                         <td>
                           <button class="btn btn-primary" data-toggle="modal" data-target="#yue">增减余额</button>
-                          <button class="btn btn-primary">课程权限</button>
+                          <button class="btn btn-primary" data-toggle="modal" data-target="#quanxian">课程权限</button>
                           <button class="btn btn-primary">停用账号</button>
                           <button class="btn btn-primary" data-toggle="modal" data-target="#edit">修改资料</button>
                           <button class="btn btn-primary jq-reset-pw">重置密码</button>
@@ -391,7 +391,7 @@
                         <td>9999999</td>
                         <td>
                           <button class="btn btn-primary" data-toggle="modal" data-target="#yue">增减余额</button>
-                          <button class="btn btn-primary">课程权限</button>
+                          <button class="btn btn-primary" data-toggle="modal" data-target="#quanxian">课程权限</button>
                           <button class="btn btn-primary">停用账号</button>
                           <button class="btn btn-primary" data-toggle="modal" data-target="#edit">修改资料</button>
                           <button class="btn btn-primary jq-reset-pw">重置密码</button>
@@ -412,7 +412,7 @@
                         <td>9999999</td>
                         <td>
                           <button class="btn btn-primary" data-toggle="modal" data-target="#yue">增减余额</button>
-                          <button class="btn btn-primary">课程权限</button>
+                          <button class="btn btn-primary" data-toggle="modal" data-target="#quanxian">课程权限</button>
                           <button class="btn btn-primary">停用账号</button>
                           <button class="btn btn-primary" data-toggle="modal" data-target="#edit">修改资料</button>
                           <button class="btn btn-primary jq-reset-pw">重置密码</button>
@@ -433,7 +433,7 @@
                         <td>9999999</td>
                         <td>
                           <button class="btn btn-primary" data-toggle="modal" data-target="#yue">增减余额</button>
-                          <button class="btn btn-primary">课程权限</button>
+                          <button class="btn btn-primary" data-toggle="modal" data-target="#quanxian">课程权限</button>
                           <button class="btn btn-primary">停用账号</button>
                           <button class="btn btn-primary" data-toggle="modal" data-target="#edit">修改资料</button>
                           <button class="btn btn-primary jq-reset-pw">重置密码</button>
@@ -454,7 +454,7 @@
                         <td>9999999</td>
                         <td>
                           <button class="btn btn-primary" data-toggle="modal" data-target="#yue">增减余额</button>
-                          <button class="btn btn-primary">课程权限</button>
+                          <button class="btn btn-primary" data-toggle="modal" data-target="#quanxian">课程权限</button>
                           <button class="btn btn-primary">停用账号</button>
                           <button class="btn btn-primary" data-toggle="modal" data-target="#edit">修改资料</button>
                           <button class="btn btn-primary jq-reset-pw">重置密码</button>
@@ -475,7 +475,7 @@
                         <td>9999999</td>
                         <td>
                           <button class="btn btn-primary" data-toggle="modal" data-target="#yue">增减余额</button>
-                          <button class="btn btn-primary">课程权限</button>
+                          <button class="btn btn-primary" data-toggle="modal" data-target="#quanxian">课程权限</button>
                           <button class="btn btn-primary">停用账号</button>
                           <button class="btn btn-primary" data-toggle="modal" data-target="#edit">修改资料</button>
                           <button class="btn btn-primary jq-reset-pw">重置密码</button>
@@ -496,7 +496,7 @@
                         <td>9999999</td>
                         <td>
                           <button class="btn btn-primary" data-toggle="modal" data-target="#yue">增减余额</button>
-                          <button class="btn btn-primary">课程权限</button>
+                          <button class="btn btn-primary" data-toggle="modal" data-target="#quanxian">课程权限</button>
                           <button class="btn btn-primary">停用账号</button>
                           <button class="btn btn-primary" data-toggle="modal" data-target="#edit">修改资料</button>
                           <button class="btn btn-primary jq-reset-pw">重置密码</button>
@@ -531,7 +531,7 @@
                       </li>
                     </ul>
                   </div>
-                </div>  
+                </div>
                 <!-- endbuild -->
 
               </div>
@@ -622,7 +622,7 @@
           <h4 id="myModalLabel" class="modal-title">增减余额</h4>
         </div>
         <div class="modal-body">
-            <p class="xc-error">请谨慎操作</p>
+          <p class="xc-error">请谨慎操作</p>
           <form class="form-horizontal">
             <div class="form-group">
               <label class="col-lg-2  control-label">增减</label>
@@ -648,8 +648,92 @@
           </form>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-default">取消</button>
+          <button type="button" class="btn btn-default" data-dismiss="modal" aria-label="Close">取消</button>
           <button type="button" class="btn btn-primary">保存</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div id="quanxian" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" class="modal fade in">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" data-dismiss="modal" aria-label="Close" class="close">
+            <span aria-hidden="true">×</span>
+          </button>
+          <h4 id="myModalLabel" class="modal-title">设置课程权限</h4>
+        </div>
+        <div class="modal-body">
+          <p class='c99'>课程权限为学校同步课程的课程版本权限，搞定语法和同步培优默认开启权限</p>
+          <p class="c99">该学校辖区为：<span class="c66">上海市（嘉定、松江、闵行、浦东），浙江（全省）江苏（南京）</span></p>
+          <p class="xc-error">（绿色目录表示目录下全部内容已开放权限，橙色表示目录下部分内容开放权限）</p>
+          <div class="xc-power">
+            <div class="xc-power-head">
+              <div class="xc-power-left">
+                课程阶段
+              </div>
+              <div class="xc-power-right">
+                选择版本
+                <div class="checkbox pull-right">
+                    <label>
+                        全选<input type="checkbox" class="jq-power-all pull-right">
+                    </label>
+                  </div>
+              </div>
+            </div>
+            <div class="xc-power-body">
+              <div class="xc-power-left">
+                <ul class="xc-power-conter jq-power-conter">
+                  <li class="c99 active">启蒙课程</li>
+                  <li class="cblue">小学英语</li>
+                  <li class="cf60">初中英语</li>
+                  <li class="c99">高中英语</li>
+                </ul>
+              </div>
+              <div class="xc-power-right jq-power-body">
+                <ul class="xc-power-conter active">
+                  <li class="cblue">教材版本1<input type="checkbox" class='pull-right'></li>
+                  <li class="cblue">教材版本1<input type="checkbox" class='pull-right'></li>
+                  <li class="cblue">教材版本1<input type="checkbox" class='pull-right'></li>
+                  <li class="cblue">教材版本1<input type="checkbox" class='pull-right'></li>
+                  <li class="c99">教材版本1<input type="checkbox" class='pull-right'></li>
+                  <li class="c99">教材版本1<input type="checkbox" class='pull-right'></li>
+                  <li class="c99">教材版本1<input type="checkbox" class='pull-right'></li>
+                </ul>
+                <ul class="xc-power-conter">
+                  <li class="cblue">教材版本2<input type="checkbox" class='pull-right'></li>
+                  <li class="cblue">教材版本1<input type="checkbox" class='pull-right'></li>
+                  <li class="cblue">教材版本1<input type="checkbox" class='pull-right'></li>
+                  <li class="cblue">教材版本1<input type="checkbox" class='pull-right'></li>
+                  <li class="c99">教材版本1<input type="checkbox" class='pull-right'></li>
+                  <li class="c99">教材版本1<input type="checkbox" class='pull-right'></li>
+                  <li class="c99">教材版本1<input type="checkbox" class='pull-right'></li>
+                </ul>
+                <ul class="xc-power-conter">
+                  <li class="cblue">教材版本3<input type="checkbox" class='pull-right'></li>
+                  <li class="cblue">教材版本1<input type="checkbox" class='pull-right'></li>
+                  <li class="cblue">教材版本1<input type="checkbox" class='pull-right'></li>
+                  <li class="cblue">教材版本1<input type="checkbox" class='pull-right'></li>
+                  <li class="c99">教材版本1<input type="checkbox" class='pull-right'></li>
+                  <li class="c99">教材版本1<input type="checkbox" class='pull-right'></li>
+                  <li class="c99">教材版本1<input type="checkbox" class='pull-right'></li>
+                </ul>
+                <ul class="xc-power-conter">
+                  <li class="cblue">教材版本4<input type="checkbox" class='pull-right'></li>
+                  <li class="cblue">教材版本1<input type="checkbox" class='pull-right'></li>
+                  <li class="cblue">教材版本1<input type="checkbox" class='pull-right'></li>
+                  <li class="cblue">教材版本1<input type="checkbox" class='pull-right'></li>
+                  <li class="c99">教材版本1<input type="checkbox" class='pull-right'></li>
+                  <li class="c99">教材版本1<input type="checkbox" class='pull-right'></li>
+                  <li class="c99">教材版本1<input type="checkbox" class='pull-right'></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal" aria-label="Close">取消</button>
+          <button type="button" class="btn btn-primary">保存修改</button>
         </div>
       </div>
     </div>
@@ -668,7 +752,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
-
+  <script src="../js/schoolmanagement.js"></script>
 
 
 
