--- a/src/html/07_personal_data.html
+++ b/src/html/07_personal_data.html
@@ -68,6 +68,8 @@
             <!-- 未设置昵称图标 -->
             <img class="edit-icon" src="../img/07/rectangle2x.png" alt="">
           </div>
+          <div class="expire immediately-expire">高中组 账号还有10天到期</div>
+          <div class="expire">初中组 2018-09-01到期</div>
           <div class="change-possword"><a  href="08_change_password.html">修改密码</a></div>
         </div>
         <div class="data-detail">
