--- a/src/html/06_shopping.html
+++ b/src/html/06_shopping.html
@@ -61,9 +61,9 @@
           <p class="my-money">我的学币：
             <span>66666</span>
           </p>
-          <p class="money-record">学币获取记录</p>
+          <p class="money-record option-record">学币获取记录</p>
           <div class="line1"></div>
-          <p class="money-record">消费记录</p>
+          <p class="money-record buy-record">消费记录</p>
         </div>
         <div class="shop-body">
           <ul class="goods-list">
@@ -151,6 +151,197 @@
             <input class="page-input" type="number">
             <p>页</p>
             <button class="page-btn">确定</button>
+          </div>
+        </div>
+        <div class="alert-layer buy-histry-alert">
+          <div class="histery-table">
+            <div class="table-head">
+              <p>购买记录</p>
+              <img class="alert-close" src="../img/xc-banner-close.png" alt="">
+            </div>
+            <ul class="buy-histry-list">
+               <li class="buy-histry-item buy-histry-item-head">
+                 <div class="histry-item1">商品</div>
+                 <div class="histry-item2">下单时间</div>
+                 <div class="histry-item3">消耗学币</div>
+                 <div class="histry-item4">兑换情况</div>
+                 <div class="histry-item5">兑换时间</div>
+               </li> 
+               <li class="buy-histry-item singular">
+                 <div class="histry-item1">商品名称</div>
+                 <div class="histry-item2">2018-01-01 22:22:22</div>
+                 <div class="histry-item3">99</div>
+                 <div class="histry-item4">未兑换</div>
+                 <div class="histry-item5">2018-01-01 22:22:22</div>
+               </li> 
+               <li class="buy-histry-item even">
+                <div class="histry-item1">商品名称</div>
+                <div class="histry-item2">2018-01-01 22:22:22</div>
+                <div class="histry-item3">99</div>
+                <div class="histry-item4">未兑换</div>
+                <div class="histry-item5">2018-01-01 22:22:22</div>
+               </li> 
+               <li class="buy-histry-item singular">
+                 <div class="histry-item1">商品名称</div>
+                 <div class="histry-item2">2018-01-01 22:22:22</div>
+                 <div class="histry-item3">99</div>
+                 <div class="histry-item4">未兑换</div>
+                 <div class="histry-item5">2018-01-01 22:22:22</div>
+               </li> 
+               <li class="buy-histry-item even">
+                <div class="histry-item1">商品名称</div>
+                <div class="histry-item2">2018-01-01 22:22:22</div>
+                <div class="histry-item3">99</div>
+                <div class="histry-item4">未兑换</div>
+                <div class="histry-item5">2018-01-01 22:22:22</div>
+               </li> 
+               <li class="buy-histry-item singular">
+                 <div class="histry-item1">商品名称</div>
+                 <div class="histry-item2">2018-01-01 22:22:22</div>
+                 <div class="histry-item3">99</div>
+                 <div class="histry-item4">未兑换</div>
+                 <div class="histry-item5">2018-01-01 22:22:22</div>
+               </li> 
+               <li class="buy-histry-item even">
+                <div class="histry-item1">商品名称</div>
+                <div class="histry-item2">2018-01-01 22:22:22</div>
+                <div class="histry-item3">99</div>
+                <div class="histry-item4">未兑换</div>
+                <div class="histry-item5">2018-01-01 22:22:22</div>
+               </li> 
+               <li class="buy-histry-item singular">
+                 <div class="histry-item1">商品名称</div>
+                 <div class="histry-item2">2018-01-01 22:22:22</div>
+                 <div class="histry-item3">99</div>
+                 <div class="histry-item4">未兑换</div>
+                 <div class="histry-item5">2018-01-01 22:22:22</div>
+               </li> 
+               <li class="buy-histry-item even">
+                <div class="histry-item1">商品名称</div>
+                <div class="histry-item2">2018-01-01 22:22:22</div>
+                <div class="histry-item3">99</div>
+                <div class="histry-item4">未兑换</div>
+                <div class="histry-item5">2018-01-01 22:22:22</div>
+               </li> 
+               <li class="buy-histry-item singular">
+                 <div class="histry-item1">商品名称</div>
+                 <div class="histry-item2">2018-01-01 22:22:22</div>
+                 <div class="histry-item3">99</div>
+                 <div class="histry-item4">未兑换</div>
+                 <div class="histry-item5">2018-01-01 22:22:22</div>
+               </li> 
+               <li class="buy-histry-item even">
+                <div class="histry-item1">商品名称</div>
+                <div class="histry-item2">2018-01-01 22:22:22</div>
+                <div class="histry-item3">99</div>
+                <div class="histry-item4">未兑换</div>
+                <div class="histry-item5">2018-01-01 22:22:22</div>
+               </li> 
+               <li class="buy-histry-item singular">
+                 <div class="histry-item1">商品名称</div>
+                 <div class="histry-item2">2018-01-01 22:22:22</div>
+                 <div class="histry-item3">99</div>
+                 <div class="histry-item4">未兑换</div>
+                 <div class="histry-item5">2018-01-01 22:22:22</div>
+               </li> 
+               <li class="buy-histry-item even">
+                <div class="histry-item1">商品名称</div>
+                <div class="histry-item2">2018-01-01 22:22:22</div>
+                <div class="histry-item3">99</div>
+                <div class="histry-item4">未兑换</div>
+                <div class="histry-item5">2018-01-01 22:22:22</div>
+               </li> 
+               <li class="buy-histry-item singular">
+                 <div class="histry-item1">商品名称</div>
+                 <div class="histry-item2">2018-01-01 22:22:22</div>
+                 <div class="histry-item3">99</div>
+                 <div class="histry-item4">未兑换</div>
+                 <div class="histry-item5">2018-01-01 22:22:22</div>
+               </li> 
+               <li class="buy-histry-item even">
+                <div class="histry-item1">商品名称</div>
+                <div class="histry-item2">2018-01-01 22:22:22</div>
+                <div class="histry-item3">99</div>
+                <div class="histry-item4">未兑换</div>
+                <div class="histry-item5">2018-01-01 22:22:22</div>
+               </li> 
+               <li class="buy-histry-item singular">
+                 <div class="histry-item1">商品名称</div>
+                 <div class="histry-item2">2018-01-01 22:22:22</div>
+                 <div class="histry-item3">99</div>
+                 <div class="histry-item4">未兑换</div>
+                 <div class="histry-item5">2018-01-01 22:22:22</div>
+               </li> 
+               <li class="buy-histry-item even">
+                <div class="histry-item1">商品名称</div>
+                <div class="histry-item2">2018-01-01 22:22:22</div>
+                <div class="histry-item3">99</div>
+                <div class="histry-item4">未兑换</div>
+                <div class="histry-item5">2018-01-01 22:22:22</div>
+               </li> 
+               <li class="buy-histry-item singular">
+                 <div class="histry-item1">商品名称</div>
+                 <div class="histry-item2">2018-01-01 22:22:22</div>
+                 <div class="histry-item3">99</div>
+                 <div class="histry-item4">未兑换</div>
+                 <div class="histry-item5">2018-01-01 22:22:22</div>
+               </li> 
+               <li class="buy-histry-item even">
+                <div class="histry-item1">商品名称</div>
+                <div class="histry-item2">2018-01-01 22:22:22</div>
+                <div class="histry-item3">99</div>
+                <div class="histry-item4">未兑换</div>
+                <div class="histry-item5">2018-01-01 22:22:22</div>
+               </li> 
+
+            </ul>
+          </div>
+        </div>
+        <div class="alert-layer obtain-histry-alert">
+          <div class="histery-table">
+            <div class="table-head">
+              <p>获取记录</p>
+              <img class="alert-close" src="../img/xc-banner-close.png" alt="">
+            </div>
+            <ul class="buy-histry-list">
+               <li class="buy-histry-item buy-histry-item-head">
+                 <div class="obtain-item1">发生时间</div>
+                 <div class="obtain-item2">类型</div>
+                 <div class="obtain-item3 obtain-item-head">数额</div>
+                 <div class="obtain-item4">获取原因</div>
+                 <div class="obtain-item5">学习内容</div>
+               </li> 
+               <li class="buy-histry-item singular">
+                 <div class="obtain-item1">2018-01-01 22:22:22</div>
+                 <div class="obtain-item2">增加</div>
+                 <div class="obtain-item3">99</div>
+                 <div class="obtain-item4">学习奖励</div>
+                 <div class="obtain-item5">同步课程-初中课程-牛津上海版七年级第二册-Unit 2 Part2-智学单词-单词初识</div>
+               </li> 
+               <li class="buy-histry-item even">
+                 <div class="obtain-item1">2018-01-01 22:22:22</div>
+                 <div class="obtain-item2">增加</div>
+                 <div class="obtain-item3">99</div>
+                 <div class="obtain-item4">学习奖励</div>
+                 <div class="obtain-item5">同步课程-初中课程-牛津上海版七年级第二册-Unit 2 Part2-智学单词-单词初识</div>
+               </li> 
+               <li class="buy-histry-item singular">
+                 <div class="obtain-item1">2018-01-01 22:22:22</div>
+                 <div class="obtain-item2">增加</div>
+                 <div class="obtain-item3 obtain-num-red">99</div>
+                 <div class="obtain-item4">学习奖励</div>
+                 <div class="obtain-item5">同步课程-初中课程-牛津上海版七年级第二册-Unit 2 Part2-智学单词-单词初识</div>
+               </li> 
+               <li class="buy-histry-item even">
+                 <div class="obtain-item1">2018-01-01 22:22:22</div>
+                 <div class="obtain-item2">增加</div>
+                 <div class="obtain-item3 obtain-num-red">99</div>
+                 <div class="obtain-item4">学习奖励</div>
+                 <div class="obtain-item5">同步课程-初中课程-牛津上海版七年级第二册-Unit 2 Part2-智学单词-单词初识</div>
+               </li> 
+              
+
+            </ul>
           </div>
         </div>
       </div>
