--- a/src/html/07_personal_data.html
+++ b/src/html/07_personal_data.html
@@ -109,6 +109,10 @@
               <div class="detail-name">家长手机</div>
               <p class="detail-content">1566984426</p>
             </div>
+            <div class="detail-item">
+              <div class="detail-name">校区编号</div>
+              <p class="detail-content">xxx-1</p>
+            </div>
           </div>
 
           <img src="" alt="" class="page-img">
@@ -176,6 +180,10 @@
               <div class="change-detail-item">
                 <div class="change-detail-name ">家长手机：</div>
                 <input type="text" placeholder="请输入家长手机" data-parsley-type="number" data-parsley-required-message='请输入正确手机号' data-parsley-minlength="11">
+              </div>
+              <div class="change-detail-item">
+                <div class="change-detail-name ">校区编号：</div>
+                <input type="text" placeholder="请输入校区编号">
               </div>
               <div class="btn-list">
                 <button class="back-btn">取消</button>
