--- a/src/html/02_reg.html
+++ b/src/html/02_reg.html
@@ -40,6 +40,7 @@
             <form class="login-form" action="">
               <p class="form-title">注册账号</p>
               <input class="login-ipt mobile-ipt" type="text" placeholder="请输入手机号">
+              <input class="login-ipt mobile-ipt" type="password" placeholder="请输入密码">
               <input class="login-ipt-small pwd" type="text" placeholder="请输入验证码">
               <button type="button" class="getcode-btn">获取验证码</button>
               <p class="errcue none"><span class="err-icon">!</span><span class="err-txt"></span></p>
