--- a/src/html/synchronize_unit_word_edit.html
+++ b/src/html/synchronize_unit_word_edit.html
@@ -274,27 +274,34 @@
                               </div>
                             </div>
                           </div>
-                          <div class="form-group col-xs-6">
-                            <label class="col-lg-2 control-label">词性</label>
-                            <div class="col-lg-10">
-                              <select name="account" class="form-control m-b">
-                                <option value="">请选择词性</option>
-                                <option>词性 1</option>
-                                <option>词性 2</option>
-                                <option>词性 3</option>
-                                <option>词性 4</option>
-                              </select>
-                            </div>
-                          </div>
-                          <div class="form-group col-xs-6">
-                            <label class="col-lg-2 control-label">词义</label>
-                            <div class="col-lg-10">
-                              <input type="text" placeholder="请输入词义" class="form-control">
+                          <div class="jq-wordMean">
+                            <div class="jq-wordMean-demo">
+                              <div class="form-group col-xs-6">
+                                <label class="col-lg-2 control-label">词性</label>
+                                <div class="col-lg-10">
+                                  <select name="account" class="form-control m-b">
+                                    <option value="">请选择词性</option>
+                                    <option>词性 1</option>
+                                    <option>词性 2</option>
+                                    <option>词性 3</option>
+                                    <option>词性 4</option>
+                                  </select>
+                                </div>
+                              </div>
+                              <div class="form-group col-xs-6">
+                                <label class="col-lg-2 control-label">词义</label>
+                                <div class="col-lg-10">
+                                  <input type="text" placeholder="请输入词义" class="form-control">
+                                </div>
+                              </div>
                             </div>
                           </div>
                           <div class="form-group col-xs-6">
                             <label class="col-lg-2 control-label">
-                              <button class="btn btn-default btn-small"> + 增加词性词义</button>
+                              <a class="btn btn-default btn-small jq-add-wordMean"> + 增加词性词义</a>
+                            </label>
+                            <label class="col-lg-2 control-label">
+                              <button class="btn btn-primary">保存</button>
                             </label>
                           </div>
                         </div>
