--- a/src/html/part/sidebar.html
+++ b/src/html/part/sidebar.html
@@ -47,6 +47,25 @@
               </a>
             </li>
             <li class=" ">
+              <a href="#studyreport" title="学校管理" data-toggle="collapse">
+                <em class="icon-home"></em>
+                <span>学习报告</span>
+              </a>
+              <ul id="studyreport" class="nav sidebar-subnav collapse">
+                <li class="sidebar-subnav-header">学习报告</li>
+                <li class=" ">
+                  <a href="studyreport_population.html" title="学校列表">
+                    <span>总体报告</span>
+                  </a>
+                </li>
+                <li class=" ">
+                  <a href="studyreport_all.html" title="销售数据">
+                    <span>全部报告</span>
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li class=" ">
               <a href="groupcoursemanagement.html" title="学员组课程管理">
                 <em class="icon-layers"></em>
                 <span>学员组课程管理</span>
