--- a/src/html/studyreport_all.html
+++ b/src/html/studyreport_all.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description" content="">
   <meta name="keywords" content="">
-  <title>学校管理-扣费设置</title>
+  <title>学习报告-全部报告</title>
   <!-- build:css -->
   <link rel="stylesheet" href="../js/vendor/fontawesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="../js/vendor/simple-line-icons/css/simple-line-icons.css">
@@ -21,8 +21,9 @@
   <!-- endbuild -->
 
 
-  <link rel="stylesheet" href="../css/main_xc.css">
 
+
+  <link rel="stylesheet" href="../css/main_xc.css">
 
 
 </head>
@@ -67,6 +68,8 @@
       </nav>
     </header>
     <!-- endbuild -->
+
+
 
 
 
@@ -241,190 +244,128 @@
 
 
 
+
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
         <div class="content-heading">
-          扣费设置
+          全部报告
         </div>
         <div class="row">
-          <div class="col-xs-12">
-            <div class="panel">
-              <div class="panel-heading">
-                <div class="xc-tab jq-xc-tab">
-                  <ul class="xc-tab-head">
-                    <li class="active">小学</li>
-                    <li class="">初中</li>
-                    <li>高中</li>
-                    <span class="line" style="left: 0px;"></span>
-                  </ul>
-                  <ul class="xc-tab-body">
-                    <li class="active">
-                      <form class="form-horizontal">
-                        <div class="form-group">
-                          <label class="col-lg-1 control-label">30天:</label>
-                          <div class="col-lg-5">
-                            <input type="text" placeholder="请输入学员组名" class="form-control">
-                          </div>
-                          <label class="control-label">元</label>
-                        </div>
-                        <div class="form-group">
-                          <label class="col-lg-1 control-label">60天:</label>
-                          <div class="col-lg-5">
-                            <input type="text" placeholder="请输入学员组名" class="form-control">
-                          </div>
-                          <label class="control-label">元</label>
-                        </div>
-                        <div class="form-group">
-                          <label class="col-lg-1 control-label">90天:</label>
-                          <div class="col-lg-5">
-                            <input type="text" placeholder="请输入学员组名" class="form-control">
-                          </div>
-                          <label class="control-label">元</label>
-                        </div>
-                        <div class="form-group">
-                          <label class="col-lg-1 control-label">6个月:</label>
-                          <div class="col-lg-5">
-                            <input type="text" placeholder="请输入学员组名" class="form-control">
-                          </div>
-                          <label class="control-label">元</label>
-                        </div>
-                        <div class="form-group">
-                          <label class="col-lg-1 control-label">1年:</label>
-                          <div class="col-lg-5">
-                            <input type="text" placeholder="请输入学员组名" class="form-control">
-                          </div>
-                          <label class="control-label">元</label>
-                        </div>
-                        <div class="form-group">
-                          <label class="col-lg-1 control-label">2年:</label>
-                          <div class="col-lg-5">
-                            <input type="text" placeholder="请输入学员组名" class="form-control">
-                          </div>
-                          <label class="control-label">元</label>
-                        </div>
-                        <div class="form-group">
-                          <label class="col-lg-1 control-label">3年:</label>
-                          <div class="col-lg-5">
-                            <input type="text" placeholder="请输入学员组名" class="form-control">
-                          </div>
-                          <label class="control-label">元</label>
-                        </div>
-                      </form>
-                    </li>
-                    <li class="">
-                      <form class="form-horizontal">
-                        <div class="form-group">
-                          <label class="col-lg-1 control-label">30天:</label>
-                          <div class="col-lg-5">
-                            <input type="text" placeholder="请输入学员组名" class="form-control">
-                          </div>
-                          <label class="control-label">元</label>
-                        </div>
-                        <div class="form-group">
-                          <label class="col-lg-1 control-label">60天:</label>
-                          <div class="col-lg-5">
-                            <input type="text" placeholder="请输入学员组名" class="form-control">
-                          </div>
-                          <label class="control-label">元</label>
-                        </div>
-                        <div class="form-group">
-                          <label class="col-lg-1 control-label">90天:</label>
-                          <div class="col-lg-5">
-                            <input type="text" placeholder="请输入学员组名" class="form-control">
-                          </div>
-                          <label class="control-label">元</label>
-                        </div>
-                        <div class="form-group">
-                          <label class="col-lg-1 control-label">6个月:</label>
-                          <div class="col-lg-5">
-                            <input type="text" placeholder="请输入学员组名" class="form-control">
-                          </div>
-                          <label class="control-label">元</label>
-                        </div>
-                        <div class="form-group">
-                          <label class="col-lg-1 control-label">1年:</label>
-                          <div class="col-lg-5">
-                            <input type="text" placeholder="请输入学员组名" class="form-control">
-                          </div>
-                          <label class="control-label">元</label>
-                        </div>
-                        <div class="form-group">
-                          <label class="col-lg-1 control-label">2年:</label>
-                          <div class="col-lg-5">
-                            <input type="text" placeholder="请输入学员组名" class="form-control">
-                          </div>
-                          <label class="control-label">元</label>
-                        </div>
-                        <div class="form-group">
-                          <label class="col-lg-1 control-label">3年:</label>
-                          <div class="col-lg-5">
-                            <input type="text" placeholder="请输入学员组名" class="form-control">
-                          </div>
-                          <label class="control-label">元</label>
-                        </div>
-                      </form>
-                    </li>
-                    <li>
-                      <form class="form-horizontal">
-                        <div class="form-group">
-                          <label class="col-lg-1 control-label">30天:</label>
-                          <div class="col-lg-5">
-                            <input type="text" placeholder="请输入学员组名" class="form-control">
-                          </div>
-                          <label class="control-label">元</label>
-                        </div>
-                        <div class="form-group">
-                          <label class="col-lg-1 control-label">60天:</label>
-                          <div class="col-lg-5">
-                            <input type="text" placeholder="请输入学员组名" class="form-control">
-                          </div>
-                          <label class="control-label">元</label>
-                        </div>
-                        <div class="form-group">
-                          <label class="col-lg-1 control-label">90天:</label>
-                          <div class="col-lg-5">
-                            <input type="text" placeholder="请输入学员组名" class="form-control">
-                          </div>
-                          <label class="control-label">元</label>
-                        </div>
-                        <div class="form-group">
-                          <label class="col-lg-1 control-label">6个月:</label>
-                          <div class="col-lg-5">
-                            <input type="text" placeholder="请输入学员组名" class="form-control">
-                          </div>
-                          <label class="control-label">元</label>
-                        </div>
-                        <div class="form-group">
-                          <label class="col-lg-1 control-label">1年:</label>
-                          <div class="col-lg-5">
-                            <input type="text" placeholder="请输入学员组名" class="form-control">
-                          </div>
-                          <label class="control-label">元</label>
-                        </div>
-                        <div class="form-group">
-                          <label class="col-lg-1 control-label">2年:</label>
-                          <div class="col-lg-5">
-                            <input type="text" placeholder="请输入学员组名" class="form-control">
-                          </div>
-                          <label class="control-label">元</label>
-                        </div>
-                        <div class="form-group">
-                          <label class="col-lg-1 control-label">3年:</label>
-                          <div class="col-lg-5">
-                            <input type="text" placeholder="请输入学员组名" class="form-control">
-                          </div>
-                          <label class="control-label">元</label>
-                        </div>
-                      </form>
-                    </li>
-                  </ul>
-                  <button class="btn btn-primary">保存</button>
+            <div class="col-xs-12">
+              <!-- START panel-->
+              <div class="panel-default">
+                <div class="panel-heading">
+                  <form class="form-horizontal">
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label xc-nowrap">选择班级</label>
+                      <div class="col-lg-4">
+                        <select name="account" class="form-control m-b" placeholder='请选择'>
+                          <option>请选择</option>
+                          <option>1</option>
+                          <option>2</option>
+                          <option>3</option>
+                          <option>4</option>
+                        </select>
+                      </div>
+                      <label class="col-lg-1 control-label xc-nowrap">学生手机：</label>
+                      <div class="col-lg-4">
+                        <input type="text" placeholder="请输入学生注册手机号检索" class="form-control">
+                      </div>
+                      <div class="col-lg-2">
+                        <button class="btn btn-primary">检索</button>
+                      </div>
+                    </div>
+                  </form>
+                  <div class="table-responsive" style="margin-bottom: 10px">
+                    <table class="table border table-words">
+                      <thead>
+                        <tr>
+                          <th class="col-xs-1" style="min-width: 80px;">学生手机</th>
+                          <th class="col-xs-1" style="min-width: 80px;">姓名</th>
+                          <th class="col-xs-3" style="min-width: 80px;">总学习效率</th>
+                          <th class="col-xs-3" style="min-width: 120px;">最后一天学习效率</th>
+                          <th class="col-xs-1" style="min-width: 80px;">连续未学</th>
+                          <th class="col-xs-1" style="min-width: 80px;">学生总积分</th>
+                          <th class="col-xs-1" style="min-width: 80px;">总学习天数</th>
+                          <th class="col-xs-1" style="min-width: 120px;">详细学习记录</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <td>18000000000</td>
+                          <td>名字名字</td>
+                          <td>未学习</td>
+                          <td>未学习</td>
+                          <td>未学习</td>
+                          <td>500</td>
+                          <td>500</td>
+                          <td>
+                            <button class="btn btn-primary">查看</button>
+                          </td>
+                        </tr>
+                        <tr>
+                            <td>18000000000</td>
+                            <td>名字名字</td>
+                            <td>未学习</td>
+                            <td>未学习</td>
+                            <td>未学习</td>
+                            <td>500</td>
+                            <td>500</td>
+                            <td>
+                              <button class="btn btn-primary">查看</button>
+                            </td>
+                          </tr>
+                          <tr>
+                              <td>18000000000</td>
+                              <td>名字名字</td>
+                              <td>52%（01:13:59/02:22:05</td>
+                              <td>52%（01:13:59/02:22:05</td>
+                              <td class="xc-red">5天</td>
+                              <td>500</td>
+                              <td>500</td>
+                              <td>
+                                <button class="btn btn-primary">查看</button>
+                              </td>
+                            </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                  <!-- build:pages -->
+                  <!-- 分页 -->
+                  <div class="row">
+                    <div class="pagination-fa col-lg-4 col-lg-offset-8 text-right">
+                      <ul class="pagination pagination-sm m0">
+                        <li>
+                          <a href="#" aria-label="Previous">
+                            <span aria-hidden="true">«</span>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">1</a>
+                        </li>
+                        <li>
+                          <a href="#">2</a>
+                        </li>
+                        <li class="active">
+                          <a href="#">3</a>
+                        </li>
+                        <li>
+                          <a href="#" aria-label="Next">
+                            <span aria-hidden="true">»</span>
+                          </a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>  
+                  <!-- endbuild -->
+  
+  
                 </div>
               </div>
             </div>
           </div>
-        </div>
       </div>
     </section>
     <!-- 主要内容END -->
@@ -441,8 +382,9 @@
 
 
 
-  </div>
 
+
+  </div>
   <!-- build:js -->
   <!-- =============== JS ===============-->
   <script src="../js/vendor/modernizr/modernizr.custom.js"></script>
@@ -459,7 +401,9 @@
   <!-- endbuild -->
 
 
-  <script src="../js/schoolmanagement.js"></script>
+
+
+  <script src="../js/groupcoursemanagement.js"></script>
 
 
 
