--- a/src/html/datastatistics_renewtoday.html
+++ b/src/html/datastatistics_renewtoday.html
@@ -28,6 +28,7 @@
 
 
 
+
 </head>
 
 <body>
@@ -70,6 +71,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -131,6 +133,25 @@
                 <em class="icon-speedometer"></em>
                 <span>数据统计</span>
               </a>
+            </li>
+            <li class=" ">
+              <a href="#studyreport" title="学校管理" data-toggle="collapse">
+                <em class="icon-home"></em>
+                <span>学习报告</span>
+              </a>
+              <ul id="studyreport" class="nav sidebar-subnav collapse">
+                <li class="sidebar-subnav-header">学习报告</li>
+                <li class=" ">
+                  <a href="studyreport_population.html" title="学校列表">
+                    <span>总体报告</span>
+                  </a>
+                </li>
+                <li class=" ">
+                  <a href="studyreport_all.html" title="销售数据">
+                    <span>全部报告</span>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class=" ">
               <a href="groupcoursemanagement.html" title="学员组课程管理">
@@ -224,6 +245,7 @@
       </div>
     </aside>
     <!-- endbuild -->
+
 
 
 
@@ -348,6 +370,7 @@
 
 
 
+
               </div>
             </div>
           </div>
@@ -361,6 +384,7 @@
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
 
 
 
@@ -390,6 +414,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
