--- a/src/html/intelligent_real_detail.html
+++ b/src/html/intelligent_real_detail.html
@@ -24,6 +24,7 @@
 
 
 
+
   <link rel="stylesheet" href="../css/main_xc.css">
 </head>
 
@@ -67,6 +68,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -123,6 +125,25 @@
                 <em class="icon-speedometer"></em>
                 <span>数据统计</span>
               </a>
+            </li>
+            <li class=" ">
+              <a href="#studyreport" title="学校管理" data-toggle="collapse">
+                <em class="icon-home"></em>
+                <span>学习报告</span>
+              </a>
+              <ul id="studyreport" class="nav sidebar-subnav collapse">
+                <li class="sidebar-subnav-header">学习报告</li>
+                <li class=" ">
+                  <a href="studyreport_population.html" title="学校列表">
+                    <span>总体报告</span>
+                  </a>
+                </li>
+                <li class=" ">
+                  <a href="studyreport_all.html" title="销售数据">
+                    <span>全部报告</span>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class=" ">
               <a href="groupcoursemanagement.html" title="学员组课程管理">
@@ -216,6 +237,7 @@
       </div>
     </aside>
     <!-- endbuild -->
+
 
 
 
@@ -390,6 +412,7 @@
 
 
 
+
   </div>
   <div id="add" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" class="modal fade" style="display: none;">
     <div class="modal-dialog">
@@ -431,6 +454,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
   <script src="../js/intelligent.js"></script>
 
