--- a/src/html/mallmanagement_commodity.html
+++ b/src/html/mallmanagement_commodity.html
@@ -21,6 +21,7 @@
   <!-- endbuild -->
 
 
+
   <!-- 上传 -->
   <link rel="stylesheet" href="../js/vendor/blueimp-file-upload/css/jquery.fileupload.css">
   <link rel="stylesheet" href="../css/main_xc.css">
@@ -68,6 +69,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -122,6 +124,25 @@
                 <em class="icon-speedometer"></em>
                 <span>数据统计</span>
               </a>
+            </li>
+            <li class=" ">
+              <a href="#studyreport" title="学校管理" data-toggle="collapse">
+                <em class="icon-home"></em>
+                <span>学习报告</span>
+              </a>
+              <ul id="studyreport" class="nav sidebar-subnav collapse">
+                <li class="sidebar-subnav-header">学习报告</li>
+                <li class=" ">
+                  <a href="studyreport_population.html" title="学校列表">
+                    <span>总体报告</span>
+                  </a>
+                </li>
+                <li class=" ">
+                  <a href="studyreport_all.html" title="销售数据">
+                    <span>全部报告</span>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class=" ">
               <a href="groupcoursemanagement.html" title="学员组课程管理">
@@ -215,6 +236,7 @@
       </div>
     </aside>
     <!-- endbuild -->
+
 
 
 
@@ -367,6 +389,7 @@
 
 
 
+
               </div>
             </div>
           </div>
@@ -380,6 +403,7 @@
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
 
 
 
@@ -402,6 +426,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
   <script src="../js/mallmanagement.js"></script>
 
