--- a/src/html/schoolmanagement_sales_info.html
+++ b/src/html/schoolmanagement_sales_info.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
 
+
   <link rel="stylesheet" href="../css/main_xc.css">
 
 
@@ -83,6 +84,7 @@
 
 
 
+
     <!-- build:sidebar -->
     <!-- 左侧菜单 -->
     <aside class="aside">
@@ -131,6 +133,25 @@
                 <em class="icon-speedometer"></em>
                 <span>数据统计</span>
               </a>
+            </li>
+            <li class=" ">
+              <a href="#studyreport" title="学校管理" data-toggle="collapse">
+                <em class="icon-home"></em>
+                <span>学习报告</span>
+              </a>
+              <ul id="studyreport" class="nav sidebar-subnav collapse">
+                <li class="sidebar-subnav-header">学习报告</li>
+                <li class=" ">
+                  <a href="studyreport_population.html" title="学校列表">
+                    <span>总体报告</span>
+                  </a>
+                </li>
+                <li class=" ">
+                  <a href="studyreport_all.html" title="销售数据">
+                    <span>全部报告</span>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class=" ">
               <a href="groupcoursemanagement.html" title="学员组课程管理">
@@ -224,6 +245,7 @@
       </div>
     </aside>
     <!-- endbuild -->
+
 
 
 
@@ -513,6 +535,7 @@
                 </div>  
                 <!-- endbuild -->
 
+
               </div>
             </div>
           </div>
@@ -526,6 +549,7 @@
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
 
 
 
@@ -556,6 +580,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
