--- a/src/html/rewardmall.html
+++ b/src/html/rewardmall.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description" content="">
   <meta name="keywords" content="">
-  <title>数据统计</title>
+  <title>奖励商城</title>
   <!-- build:css -->
   <link rel="stylesheet" href="../js/vendor/fontawesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="../js/vendor/simple-line-icons/css/simple-line-icons.css">
@@ -24,9 +24,7 @@
 
 
 
-
-
-
+  <link rel="stylesheet" href="../css/main_xc.css">
 
 
 
@@ -72,11 +70,6 @@
       </nav>
     </header>
     <!-- endbuild -->
-
-
-
-
-
 
 
 
@@ -295,90 +288,31 @@
 
 
 
-
-
-
-
-
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
         <div class="content-heading">
-          体验转化
+          奖励商城
+          <span class="text-sm hidden-xs">您的每一分辛劳，智厢逢智能英语都心怀感激</span>
         </div>
         <div class="row">
           <div class="col-xs-12">
-            <div class="panel-default">
-              <!-- START table-responsive-->
+            <div class="panel">
               <div class="panel-heading">
-                <form class="text-right form-lineH">
-                  <div class="row">
-                    <div class="form-group col-sm-3">
-                      <label class="col-sm-4">学生手机：</label>
-                      <div class="col-sm-8">
-                        <input type="tel" name="" class="form-control">
-                      </div>
-                    </div>
-                    <div class="col-sm-1">
-                      <button type="button" class="btn btn-primary">搜索</button>
-                    </div>
+                <div class="rewardmall-price">
+                  <div class="rewardmall-left">
+                      我的学币<span><em class="fa fa-jpy"></em>10000</span>
                   </div>
-                </form>
-              </div>
-              <div class="panel-heading">
-                <div class="table-responsive">
-                  <table class="table table-bordered table-hover dataTable">
-                    <thead>
-                      <tr>
-                        <th>学生手机</th>
-                        <th>姓名</th>
-                        <th>昵称</th>
-                        <th>所属教师</th>
-                        <th>所属班级</th>
-                        <th>有效期</th>
-                        <th>到期日期</th>
-                        <th>当前学员组</th>
-                        <th>操作</th>
-                      </tr>
-                    </thead>
-                    <tbody id="designerlist">
-                      <tr>
-                        <td class="text-warning">18000000000</td>
-                        <td>名字名字</td>
-                        <td>昵称昵称</td>
-                        <td>教师教师</td>
-                        <td>班级班级</td>
-                        <td>5天</td>
-                        <td>2015-01-21</td>
-                        <td>小学</td>
-                        <td><a class="btn btn-primary" href="./datastatistics_todayrecord.html">查看</a></td>
-                      </tr>
-                      <tr>
-                        <td class="text-warning">18000000000</td>
-                        <td>名字名字</td>
-                        <td>昵称昵称</td>
-                        <td>教师教师</td>
-                        <td>班级班级</td>
-                        <td>5天</td>
-                        <td>2015-01-21</td>
-                        <td>七年级</td>
-                        <td><a class="btn btn-primary" href="./datastatistics_todayrecord.html">查看</a></td>
-                      </tr>
-                      <tr>
-                        <td>18000000000</td>
-                        <td>名字名字</td>
-                        <td>昵称昵称</td>
-                        <td>教师教师</td>
-                        <td>班级班级</td>
-                        <td>5天</td>
-                        <td>2015-01-21</td>
-                        <td>七年级</td>
-                        <td><a class="btn btn-primary" href="./datastatistics_todayrecord.html">查看</a></td>
-                      </tr>
-                    </tbody>
-                  </table>
+                  <div class="rewardmall-center">您的学生每增加1枚学币，您也将增加1枚学币（体验学员的学币不计算在内，请努力发展体验学员成为正式学员，成为正式学员时将一次性计入已有的学币）</div>
+                  <a class="text-primary">消费记录</a>
                 </div>
+                <div class="rewardmall-list">
+                  <ul>
+                    <li class="rewardmall-list-item">
 
+                    </li>
+                  </ul>
+                </div>
                 <!-- build:pages -->
                 <!-- 分页 -->
                 <div class="row">
@@ -411,8 +345,6 @@
 
 
 
-
-
               </div>
             </div>
           </div>
@@ -435,14 +367,7 @@
 
 
 
-
-
-
-
-
-
   </div>
-
   <!-- build:js -->
   <!-- =============== JS ===============-->
   <script src="../js/vendor/modernizr/modernizr.custom.js"></script>
@@ -462,12 +387,7 @@
 
 
 
-
-
-
-
-
-
+  <script src="../js/rewardmall.js"></script>
 
 
 
