--- a/src/html/curriculum_review.html
+++ b/src/html/curriculum_review.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description" content="">
   <meta name="keywords" content="">
-  <title>学生管理-未分配学生列表</title>
+  <title>学习报告-全部报告</title>
   <!-- build:css -->
   <link rel="stylesheet" href="../js/vendor/fontawesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="../js/vendor/simple-line-icons/css/simple-line-icons.css">
@@ -24,7 +24,10 @@
 
 
 
+
   <link rel="stylesheet" href="../css/main_xc.css">
+
+
 </head>
 
 <body>
@@ -67,6 +70,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -285,146 +289,244 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
         <div class="content-heading">
-          未分配学生列表
+          复习模式管理
         </div>
         <div class="row">
           <div class="col-xs-12">
             <!-- START panel-->
             <div class="panel-default">
               <div class="panel-heading">
-                <form class="text-right form-lineH">
-                  <div class="row">
-                    <div class="form-group col-sm-3">
-                      <label class="col-sm-4 xc-nowrap">学生手机：</label>
-                      <div class="col-sm-8">
-                        <input type="tel" name="" class="form-control">
-                      </div>
+                <form class="form-horizontal">
+                  <div class="form-group">
+                    <label class="col-xs-1 control-label">选择班级:</label>
+                    <div class="col-xs-4">
+                      <select name="account" class="form-control m-b">
+                        <option value="">选择班级</option>
+                        <option>1班</option>
+                        <option>2班</option>
+                        <option>3班</option>
+                        <option>4班</option>
+                      </select>
                     </div>
-                    <div class="col-sm-1">
-                      <button type="button" class="btn btn-primary">搜索</button>
+                    <label class="col-xs-1 control-label">学生手机:</label>
+                    <div class="col-xs-4">
+                      <input type="text" placeholder="请输入学生注册手机号检索" class="form-control">
+                    </div>
+                    <div class="col-xs-1">
+                      <button class="btn btn-primary">搜索</button>
                     </div>
                   </div>
                 </form>
-              </div>
-              <!-- START table-responsive-->
-              <div class="panel-heading">
-                <div class="table-responsive">
-                  <table id="table-ext-1" class="table table-bordered table-hover dataTable">
+                <div class="table-responsive curr-review" style="margin-bottom: 10px">
+                  <table class="table border table-words">
                     <thead>
                       <tr>
-                        <th data-check-all="">
-                          <div data-toggle="tooltip" data-title="全选" class="checkbox c-checkbox" data-original-title="" title="">
-                            <label>
-                              <input class="jq-allcheck" type="checkbox">
-                              <span class="fa fa-check"></span>
-                            </label>
-                          </div>
-                        </th>
-                        <th>学生手机</th>
-                        <th>姓名</th>
-                        <th>昵称</th>
-                        <th>所属学校</th>
-                        <th>所属教师</th>
-                        <th>所属班级</th>
-                        <th>有效期</th>
-                        <th>注册日期</th>
-                        <th>到期日期</th>
-                        <th>当前学币</th>
-                        <th>年级</th>
-                        <th>操作</th>
+                        <th class="col-xs-1" style="min-width: 80px;"></th>
+                        <th class="col-xs-1" style="min-width: 100px;">学生手机</th>
+                        <th class="col-xs-1" style="min-width: 100px;">姓名</th>
+                        <th class="col-xs-4 text-center" style="min-width: 490px;">最后一天学习效率</th>
+                        <th class="col-xs-4 text-center" style="min-width: 400px;">强制复习范围</th>
                       </tr>
                     </thead>
-                    <tbody id="designerlist">
+                    <tbody>
                       <tr>
+                        <td class="col-xs-1"><input type="checkbox" /></td>
+                        <td class="col-xs-1" style="min-width: 100px;">18000000000</td>
+                        <td class="col-xs-1" style="min-width: 100px;">名字</td>
                         <td>
-                          <div class="checkbox c-checkbox">
-                            <label>
-                              <input type="checkbox">
-                              <span class="fa fa-check"></span>
-                            </label>
-                          </div>
+                          <label><input type="checkbox" />自由学习</label>
+                          <label><input type="checkbox" />当前课程强制</label>
+                          <label><input type="checkbox" />班级课程强制</label>
+                          <label><input type="checkbox" />全部课程强制</label>
                         </td>
-                        <td class="text-warning">18000000000</td>
-                        <td>名字名字</td>
-                        <td>昵称昵称</td>
-                        <td>学校</td>
-                        <td>教师</td>
-                        <td>班级</td>
-                        <td class="text-danger">5天</td>
-                        <td>2015-01-21</td>
-                        <td>2015-01-21</td>
-                        <td>500</td>
-                        <td>七年级</td>
                         <td>
-                          <a class="btn btn-primary jq-changeschool" href="javascript:;">分配学校</a>
-                          <a class="btn btn-primary jq-edit" href="javascript:;">修改资料</a>
-                          <a class="btn btn-primary jq-phone" href="javascript:;">改绑手机</a>
-                          <a class="btn btn-primary jq-pswd" href="javascript:;">重置密码</a>
+                          <label><input type="checkbox" />听音写词</label>
+                          <label><input type="checkbox" />看字拼词</label>
+                          <label><input type="checkbox" />看字组句</label>
+                          <label><input type="checkbox" />看字拼句</label>
                         </td>
                       </tr>
                       <tr>
+                        <td class="col-xs-1"><input type="checkbox" /></td>
+                        <td class="col-xs-1" style="min-width: 100px;">18000000000</td>
+                        <td class="col-xs-1" style="min-width: 100px;">名字</td>
                         <td>
-                          <div class="checkbox c-checkbox">
-                            <label>
-                              <input type="checkbox">
-                              <span class="fa fa-check"></span>
-                            </label>
-                          </div>
+                          <label><input type="checkbox" />自由学习</label>
+                          <label><input type="checkbox" />当前课程强制</label>
+                          <label><input type="checkbox" />班级课程强制</label>
+                          <label><input type="checkbox" />全部课程强制</label>
                         </td>
-                        <td>18000000000</td>
-                        <td>名字名字</td>
-                        <td>昵称昵称</td>
-                        <td>学校</td>
-                        <td>教师</td>
-                        <td>班级</td>
-                        <td>5天</td>
-                        <td>2015-01-21</td>
-                        <td class="text-danger">2015-01-21</td>
-                        <td>500</td>
-                        <td>七年级</td>
                         <td>
-                          <a class="btn btn-primary jq-changeschool" href="javascript:;">分配学校</a>
-                          <a class="btn btn-primary jq-edit" href="javascript:;">修改资料</a>
-                          <a class="btn btn-primary jq-phone" href="javascript:;">改绑手机</a>
-                          <a class="btn btn-primary jq-pswd" href="javascript:;">重置密码</a>
+                          <label><input type="checkbox" />听音写词</label>
+                          <label><input type="checkbox" />看字拼词</label>
+                          <label><input type="checkbox" />看字组句</label>
+                          <label><input type="checkbox" />看字拼句</label>
                         </td>
                       </tr>
                       <tr>
+                        <td class="col-xs-1"><input type="checkbox" /></td>
+                        <td class="col-xs-1" style="min-width: 100px;">18000000000</td>
+                        <td class="col-xs-1" style="min-width: 100px;">名字</td>
                         <td>
-                          <div class="checkbox c-checkbox">
-                            <label>
-                              <input type="checkbox">
-                              <span class="fa fa-check"></span>
-                            </label>
-                          </div>
+                          <label><input type="checkbox" />自由学习</label>
+                          <label><input type="checkbox" />当前课程强制</label>
+                          <label><input type="checkbox" />班级课程强制</label>
+                          <label><input type="checkbox" />全部课程强制</label>
                         </td>
-                        <td>18000000000</td>
-                        <td>名字名字</td>
-                        <td>昵称昵称</td>
-                        <td>学校</td>
-                        <td>教师</td>
-                        <td>班级</td>
-                        <td>5天</td>
-                        <td>2015-01-21</td>
-                        <td>2015-01-21</td>
-                        <td>500</td>
-                        <td>七年级</td>
                         <td>
-                          <a class="btn btn-primary jq-changeschool" href="javascript:;">分配学校</a>
-                          <a class="btn btn-primary jq-edit" href="javascript:;">修改资料</a>
-                          <a class="btn btn-primary jq-phone" href="javascript:;">改绑手机</a>
-                          <a class="btn btn-primary jq-pswd" href="javascript:;">重置密码</a>
+                          <label><input type="checkbox" />听音写词</label>
+                          <label><input type="checkbox" />看字拼词</label>
+                          <label><input type="checkbox" />看字组句</label>
+                          <label><input type="checkbox" />看字拼句</label>
                         </td>
                       </tr>
+                      <tr>
+                        <td class="col-xs-1"><input type="checkbox" /></td>
+                        <td class="col-xs-1" style="min-width: 100px;">18000000000</td>
+                        <td class="col-xs-1" style="min-width: 100px;">名字</td>
+                        <td>
+                          <label><input type="checkbox" />自由学习</label>
+                          <label><input type="checkbox" />当前课程强制</label>
+                          <label><input type="checkbox" />班级课程强制</label>
+                          <label><input type="checkbox" />全部课程强制</label>
+                        </td>
+                        <td>
+                          <label><input type="checkbox" />听音写词</label>
+                          <label><input type="checkbox" />看字拼词</label>
+                          <label><input type="checkbox" />看字组句</label>
+                          <label><input type="checkbox" />看字拼句</label>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td class="col-xs-1"><input type="checkbox" /></td>
+                        <td class="col-xs-1" style="min-width: 100px;">18000000000</td>
+                        <td class="col-xs-1" style="min-width: 100px;">名字</td>
+                        <td>
+                          <label><input type="checkbox" />自由学习</label>
+                          <label><input type="checkbox" />当前课程强制</label>
+                          <label><input type="checkbox" />班级课程强制</label>
+                          <label><input type="checkbox" />全部课程强制</label>
+                        </td>
+                        <td>
+                          <label><input type="checkbox" />听音写词</label>
+                          <label><input type="checkbox" />看字拼词</label>
+                          <label><input type="checkbox" />看字组句</label>
+                          <label><input type="checkbox" />看字拼句</label>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td class="col-xs-1"><input type="checkbox" /></td>
+                        <td class="col-xs-1" style="min-width: 100px;">18000000000</td>
+                        <td class="col-xs-1" style="min-width: 100px;">名字</td>
+                        <td>
+                          <label><input type="checkbox" />自由学习</label>
+                          <label><input type="checkbox" />当前课程强制</label>
+                          <label><input type="checkbox" />班级课程强制</label>
+                          <label><input type="checkbox" />全部课程强制</label>
+                        </td>
+                        <td>
+                          <label><input type="checkbox" />听音写词</label>
+                          <label><input type="checkbox" />看字拼词</label>
+                          <label><input type="checkbox" />看字组句</label>
+                          <label><input type="checkbox" />看字拼句</label>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td class="col-xs-1"><input type="checkbox" /></td>
+                        <td class="col-xs-1" style="min-width: 100px;">18000000000</td>
+                        <td class="col-xs-1" style="min-width: 100px;">名字</td>
+                        <td>
+                          <label><input type="checkbox" />自由学习</label>
+                          <label><input type="checkbox" />当前课程强制</label>
+                          <label><input type="checkbox" />班级课程强制</label>
+                          <label><input type="checkbox" />全部课程强制</label>
+                        </td>
+                        <td>
+                          <label><input type="checkbox" />听音写词</label>
+                          <label><input type="checkbox" />看字拼词</label>
+                          <label><input type="checkbox" />看字组句</label>
+                          <label><input type="checkbox" />看字拼句</label>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td class="col-xs-1"><input type="checkbox" /></td>
+                        <td class="col-xs-1" style="min-width: 100px;">18000000000</td>
+                        <td class="col-xs-1" style="min-width: 100px;">名字</td>
+                        <td>
+                          <label><input type="checkbox" />自由学习</label>
+                          <label><input type="checkbox" />当前课程强制</label>
+                          <label><input type="checkbox" />班级课程强制</label>
+                          <label><input type="checkbox" />全部课程强制</label>
+                        </td>
+                        <td>
+                          <label><input type="checkbox" />听音写词</label>
+                          <label><input type="checkbox" />看字拼词</label>
+                          <label><input type="checkbox" />看字组句</label>
+                          <label><input type="checkbox" />看字拼句</label>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td class="col-xs-1"><input type="checkbox" /></td>
+                        <td class="col-xs-1" style="min-width: 100px;">18000000000</td>
+                        <td class="col-xs-1" style="min-width: 100px;">名字</td>
+                        <td>
+                          <label><input type="checkbox" />自由学习</label>
+                          <label><input type="checkbox" />当前课程强制</label>
+                          <label><input type="checkbox" />班级课程强制</label>
+                          <label><input type="checkbox" />全部课程强制</label>
+                        </td>
+                        <td>
+                          <label><input type="checkbox" />听音写词</label>
+                          <label><input type="checkbox" />看字拼词</label>
+                          <label><input type="checkbox" />看字组句</label>
+                          <label><input type="checkbox" />看字拼句</label>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td class="col-xs-1"><input type="checkbox" /></td>
+                        <td class="col-xs-1" style="min-width: 100px;">18000000000</td>
+                        <td class="col-xs-1" style="min-width: 100px;">名字</td>
+                        <td>
+                          <label><input type="checkbox" />自由学习</label>
+                          <label><input type="checkbox" />当前课程强制</label>
+                          <label><input type="checkbox" />班级课程强制</label>
+                          <label><input type="checkbox" />全部课程强制</label>
+                        </td>
+                        <td>
+                          <label><input type="checkbox" />听音写词</label>
+                          <label><input type="checkbox" />看字拼词</label>
+                          <label><input type="checkbox" />看字组句</label>
+                          <label><input type="checkbox" />看字拼句</label>
+                        </td>
+                      </tr>
+                      <tr>
+                          <td class="col-xs-1"><label class="all"><input type="checkbox" />全部</label></td>
+                          <td class="col-xs-1" style="min-width: 100px;"></td>
+                          <td class="col-xs-1" style="min-width: 100px;"></td>
+                          <td>
+                            <label><input type="checkbox" />自由学习</label>
+                            <label><input type="checkbox" />当前课程强制</label>
+                            <label><input type="checkbox" />班级课程强制</label>
+                            <label><input type="checkbox" />全部课程强制</label>
+                          </td>
+                          <td>
+                            <label><input type="checkbox" />听音写词</label>
+                            <label><input type="checkbox" />看字拼词</label>
+                            <label><input type="checkbox" />看字组句</label>
+                            <label><input type="checkbox" />看字拼句</label>
+                          </td>
+                        </tr>
                     </tbody>
                   </table>
-                  <a class="btn btn-primary jq-changeschool" href="javascript:;">分配学校</a>
                 </div>
-
+                <div class="text-right xc-mb10">
+                    <button class="btn btn-primary">批量提交</button>
+                  </div>
                 <!-- build:pages -->
                 <!-- 分页 -->
                 <div class="row">
@@ -454,12 +556,6 @@
                 </div>  
                 <!-- endbuild -->
 
-
-
-
-
-
-
               </div>
             </div>
           </div>
@@ -483,8 +579,8 @@
 
 
 
-  </div>
 
+  </div>
   <!-- build:js -->
   <!-- =============== JS ===============-->
   <script src="../js/vendor/modernizr/modernizr.custom.js"></script>
@@ -504,9 +600,6 @@
 
 
 
-
-
-  <script src="../js/studentmanagement.js"></script>
 
 </body>
 
