--- a/src/html/intelligent_test.html
+++ b/src/html/intelligent_test.html
@@ -25,6 +25,8 @@
 
 
 
+
+
   <link rel="stylesheet" href="../css/main_xc.css">
 </head>
 
@@ -68,6 +70,8 @@
       </nav>
     </header>
     <!-- endbuild -->
+
+
 
 
 
@@ -195,6 +199,30 @@
               </ul>
             </li>
             <li class=" ">
+              <a href="#curriculum" title="课程管理" data-toggle="collapse">
+                <em class="icon-home"></em>
+                <span>课程管理</span>
+              </a>
+              <ul id="curriculum" class="nav sidebar-subnav collapse">
+                <li class="sidebar-subnav-header">课程管理</li>
+                <li class=" ">
+                  <a href="curriculum_class.html" title="班级管理">
+                    <span>课程管理-班级管理</span>
+                  </a>
+                </li>
+                <li class=" ">
+                  <a href="curriculum_study.html" title="学习任务">
+                    <span>课程管理-学习任务</span>
+                  </a>
+                </li>
+                <li class=" ">
+                  <a href="curriculum_review.html" title="复习模式">
+                    <span>课程管理-复习模式</span>
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li class=" ">
               <a href="#studentmanagement" title="学生管理" data-toggle="collapse">
                 <em class="icon-graduation"></em>
                 <span>学生管理</span>
@@ -232,11 +260,27 @@
                 </li>
               </ul>
             </li>
+            <li class=" ">
+                <a href="#rewardmall" title="商城管理" data-toggle="collapse">
+                  <em class="icon-present"></em>
+                  <span>奖励商城</span>
+                </a>
+                <ul id="rewardmall" class="nav sidebar-subnav collapse">
+                  <li class="sidebar-subnav-header">奖励商城</li>
+                  <li class=" ">
+                    <a href="rewardmall.html" title="商品管理">
+                      <span>奖励商城</span>
+                    </a>
+                  </li>
+                </ul>
+              </li>
           </ul>
         </nav>
       </div>
     </aside>
     <!-- endbuild -->
+
+
 
 
 
@@ -775,6 +819,8 @@
 
 
 
+
+
   </div>
   <!-- 新增弹窗start -->
   <div id="jiaocai" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" class="modal fade" style="display: none;">
@@ -855,6 +901,8 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
+
 
 
 
