--- a/src/html/intelligent_test_read_04.html
+++ b/src/html/intelligent_test_read_04.html
@@ -22,6 +22,7 @@
 
 
 
+
   <link rel="stylesheet" href="../css/main_xc.css">
 
 
@@ -68,6 +69,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -194,6 +196,30 @@
               </ul>
             </li>
             <li class=" ">
+              <a href="#curriculum" title="课程管理" data-toggle="collapse">
+                <em class="icon-home"></em>
+                <span>课程管理</span>
+              </a>
+              <ul id="curriculum" class="nav sidebar-subnav collapse">
+                <li class="sidebar-subnav-header">课程管理</li>
+                <li class=" ">
+                  <a href="curriculum_class.html" title="班级管理">
+                    <span>课程管理-班级管理</span>
+                  </a>
+                </li>
+                <li class=" ">
+                  <a href="curriculum_study.html" title="学习任务">
+                    <span>课程管理-学习任务</span>
+                  </a>
+                </li>
+                <li class=" ">
+                  <a href="curriculum_review.html" title="复习模式">
+                    <span>课程管理-复习模式</span>
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li class=" ">
               <a href="#studentmanagement" title="学生管理" data-toggle="collapse">
                 <em class="icon-graduation"></em>
                 <span>学生管理</span>
@@ -231,11 +257,26 @@
                 </li>
               </ul>
             </li>
+            <li class=" ">
+                <a href="#rewardmall" title="商城管理" data-toggle="collapse">
+                  <em class="icon-present"></em>
+                  <span>奖励商城</span>
+                </a>
+                <ul id="rewardmall" class="nav sidebar-subnav collapse">
+                  <li class="sidebar-subnav-header">奖励商城</li>
+                  <li class=" ">
+                    <a href="rewardmall.html" title="商品管理">
+                      <span>奖励商城</span>
+                    </a>
+                  </li>
+                </ul>
+              </li>
           </ul>
         </nav>
       </div>
     </aside>
     <!-- endbuild -->
+
 
 
 
@@ -391,6 +432,7 @@
 
 
 
+
   </div>
 
   <!-- build:js -->
@@ -407,6 +449,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
