--- a/src/html/studyreport_all.html
+++ b/src/html/studyreport_all.html
@@ -23,6 +23,8 @@
 
 
 
+
+
   <link rel="stylesheet" href="../css/main_xc.css">
 
 
@@ -68,6 +70,8 @@
       </nav>
     </header>
     <!-- endbuild -->
+
+
 
 
 
@@ -195,6 +199,30 @@
               </ul>
             </li>
             <li class=" ">
+              <a href="#curriculum" title="课程管理" data-toggle="collapse">
+                <em class="icon-home"></em>
+                <span>课程管理</span>
+              </a>
+              <ul id="curriculum" class="nav sidebar-subnav collapse">
+                <li class="sidebar-subnav-header">课程管理</li>
+                <li class=" ">
+                  <a href="curriculum_class.html" title="班级管理">
+                    <span>课程管理-班级管理</span>
+                  </a>
+                </li>
+                <li class=" ">
+                  <a href="curriculum_study.html" title="学习任务">
+                    <span>课程管理-学习任务</span>
+                  </a>
+                </li>
+                <li class=" ">
+                  <a href="curriculum_review.html" title="复习模式">
+                    <span>课程管理-复习模式</span>
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li class=" ">
               <a href="#studentmanagement" title="学生管理" data-toggle="collapse">
                 <em class="icon-graduation"></em>
                 <span>学生管理</span>
@@ -232,11 +260,27 @@
                 </li>
               </ul>
             </li>
+            <li class=" ">
+                <a href="#rewardmall" title="商城管理" data-toggle="collapse">
+                  <em class="icon-present"></em>
+                  <span>奖励商城</span>
+                </a>
+                <ul id="rewardmall" class="nav sidebar-subnav collapse">
+                  <li class="sidebar-subnav-header">奖励商城</li>
+                  <li class=" ">
+                    <a href="rewardmall.html" title="商品管理">
+                      <span>奖励商城</span>
+                    </a>
+                  </li>
+                </ul>
+              </li>
           </ul>
         </nav>
       </div>
     </aside>
     <!-- endbuild -->
+
+
 
 
 
@@ -334,32 +378,34 @@
                   </div>
                   <!-- build:pages -->
                   <!-- 分页 -->
-                  <div class="row">
-                    <div class="pagination-fa col-lg-4 col-lg-offset-8 text-right">
-                      <ul class="pagination pagination-sm m0">
-                        <li>
-                          <a href="#" aria-label="Previous">
-                            <span aria-hidden="true">«</span>
-                          </a>
-                        </li>
-                        <li>
-                          <a href="#">1</a>
-                        </li>
-                        <li>
-                          <a href="#">2</a>
-                        </li>
-                        <li class="active">
-                          <a href="#">3</a>
-                        </li>
-                        <li>
-                          <a href="#" aria-label="Next">
-                            <span aria-hidden="true">»</span>
-                          </a>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>  
+                <div class="row">
+                  <div class="pagination-fa col-lg-4 col-lg-offset-8 text-right">
+                    <ul class="pagination pagination-sm m0">
+                      <li>
+                        <a href="#" aria-label="Previous">
+                          <span aria-hidden="true">«</span>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">1</a>
+                      </li>
+                      <li>
+                        <a href="#">2</a>
+                      </li>
+                      <li class="active">
+                        <a href="#">3</a>
+                      </li>
+                      <li>
+                        <a href="#" aria-label="Next">
+                          <span aria-hidden="true">»</span>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>  
                   <!-- endbuild -->
+
+
   
   
                 </div>
@@ -384,6 +430,8 @@
 
 
 
+
+
   </div>
   <!-- build:js -->
   <!-- =============== JS ===============-->
@@ -399,6 +447,8 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
+
 
 
 
