--- a/src/html/studyreport_population.html
+++ b/src/html/studyreport_population.html
@@ -23,6 +23,7 @@
 
 
 
+
   <link rel="stylesheet" href="../css/main_xc.css">
 
 
@@ -68,6 +69,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -195,6 +197,30 @@
               </ul>
             </li>
             <li class=" ">
+              <a href="#curriculum" title="课程管理" data-toggle="collapse">
+                <em class="icon-home"></em>
+                <span>课程管理</span>
+              </a>
+              <ul id="curriculum" class="nav sidebar-subnav collapse">
+                <li class="sidebar-subnav-header">课程管理</li>
+                <li class=" ">
+                  <a href="curriculum_class.html" title="班级管理">
+                    <span>课程管理-班级管理</span>
+                  </a>
+                </li>
+                <li class=" ">
+                  <a href="curriculum_study.html" title="学习任务">
+                    <span>课程管理-学习任务</span>
+                  </a>
+                </li>
+                <li class=" ">
+                  <a href="curriculum_review.html" title="复习模式">
+                    <span>课程管理-复习模式</span>
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li class=" ">
               <a href="#studentmanagement" title="学生管理" data-toggle="collapse">
                 <em class="icon-graduation"></em>
                 <span>学生管理</span>
@@ -232,11 +258,26 @@
                 </li>
               </ul>
             </li>
+            <li class=" ">
+                <a href="#rewardmall" title="商城管理" data-toggle="collapse">
+                  <em class="icon-present"></em>
+                  <span>奖励商城</span>
+                </a>
+                <ul id="rewardmall" class="nav sidebar-subnav collapse">
+                  <li class="sidebar-subnav-header">奖励商城</li>
+                  <li class=" ">
+                    <a href="rewardmall.html" title="商品管理">
+                      <span>奖励商城</span>
+                    </a>
+                  </li>
+                </ul>
+              </li>
           </ul>
         </nav>
       </div>
     </aside>
     <!-- endbuild -->
+
 
 
 
@@ -455,6 +496,7 @@
 
 
 
+
   </div>
   <div id="exprie" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" class="modal fade" style="display: none;">
     <div class="modal-dialog modal-lg">
@@ -529,32 +571,33 @@
 
             <!-- build:pages -->
             <!-- 分页 -->
-            <div class="row">
-              <div class="pagination-fa col-lg-4 col-lg-offset-8 text-right">
-                <ul class="pagination pagination-sm m0">
-                  <li>
-                    <a href="#" aria-label="Previous">
-                      <span aria-hidden="true">«</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">1</a>
-                  </li>
-                  <li>
-                    <a href="#">2</a>
-                  </li>
-                  <li class="active">
-                    <a href="#">3</a>
-                  </li>
-                  <li>
-                    <a href="#" aria-label="Next">
-                      <span aria-hidden="true">»</span>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </div>
+                <div class="row">
+                  <div class="pagination-fa col-lg-4 col-lg-offset-8 text-right">
+                    <ul class="pagination pagination-sm m0">
+                      <li>
+                        <a href="#" aria-label="Previous">
+                          <span aria-hidden="true">«</span>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">1</a>
+                      </li>
+                      <li>
+                        <a href="#">2</a>
+                      </li>
+                      <li class="active">
+                        <a href="#">3</a>
+                      </li>
+                      <li>
+                        <a href="#" aria-label="Next">
+                          <span aria-hidden="true">»</span>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>  
             <!-- endbuild -->
+
           </div>
         </div>
       </div>
@@ -624,32 +667,33 @@
 
             <!-- build:pages -->
             <!-- 分页 -->
-            <div class="row">
-              <div class="pagination-fa col-lg-4 col-lg-offset-8 text-right">
-                <ul class="pagination pagination-sm m0">
-                  <li>
-                    <a href="#" aria-label="Previous">
-                      <span aria-hidden="true">«</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">1</a>
-                  </li>
-                  <li>
-                    <a href="#">2</a>
-                  </li>
-                  <li class="active">
-                    <a href="#">3</a>
-                  </li>
-                  <li>
-                    <a href="#" aria-label="Next">
-                      <span aria-hidden="true">»</span>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </div>
+                <div class="row">
+                  <div class="pagination-fa col-lg-4 col-lg-offset-8 text-right">
+                    <ul class="pagination pagination-sm m0">
+                      <li>
+                        <a href="#" aria-label="Previous">
+                          <span aria-hidden="true">«</span>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">1</a>
+                      </li>
+                      <li>
+                        <a href="#">2</a>
+                      </li>
+                      <li class="active">
+                        <a href="#">3</a>
+                      </li>
+                      <li>
+                        <a href="#" aria-label="Next">
+                          <span aria-hidden="true">»</span>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>  
             <!-- endbuild -->
+
           </div>
         </div>
       </div>
@@ -720,32 +764,33 @@
 
             <!-- build:pages -->
             <!-- 分页 -->
-            <div class="row">
-              <div class="pagination-fa col-lg-4 col-lg-offset-8 text-right">
-                <ul class="pagination pagination-sm m0">
-                  <li>
-                    <a href="#" aria-label="Previous">
-                      <span aria-hidden="true">«</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">1</a>
-                  </li>
-                  <li>
-                    <a href="#">2</a>
-                  </li>
-                  <li class="active">
-                    <a href="#">3</a>
-                  </li>
-                  <li>
-                    <a href="#" aria-label="Next">
-                      <span aria-hidden="true">»</span>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </div>
+                <div class="row">
+                  <div class="pagination-fa col-lg-4 col-lg-offset-8 text-right">
+                    <ul class="pagination pagination-sm m0">
+                      <li>
+                        <a href="#" aria-label="Previous">
+                          <span aria-hidden="true">«</span>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">1</a>
+                      </li>
+                      <li>
+                        <a href="#">2</a>
+                      </li>
+                      <li class="active">
+                        <a href="#">3</a>
+                      </li>
+                      <li>
+                        <a href="#" aria-label="Next">
+                          <span aria-hidden="true">»</span>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>  
             <!-- endbuild -->
+
           </div>
         </div>
       </div>
@@ -812,32 +857,33 @@
 
             <!-- build:pages -->
             <!-- 分页 -->
-            <div class="row">
-              <div class="pagination-fa col-lg-4 col-lg-offset-8 text-right">
-                <ul class="pagination pagination-sm m0">
-                  <li>
-                    <a href="#" aria-label="Previous">
-                      <span aria-hidden="true">«</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">1</a>
-                  </li>
-                  <li>
-                    <a href="#">2</a>
-                  </li>
-                  <li class="active">
-                    <a href="#">3</a>
-                  </li>
-                  <li>
-                    <a href="#" aria-label="Next">
-                      <span aria-hidden="true">»</span>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </div>
+                <div class="row">
+                  <div class="pagination-fa col-lg-4 col-lg-offset-8 text-right">
+                    <ul class="pagination pagination-sm m0">
+                      <li>
+                        <a href="#" aria-label="Previous">
+                          <span aria-hidden="true">«</span>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">1</a>
+                      </li>
+                      <li>
+                        <a href="#">2</a>
+                      </li>
+                      <li class="active">
+                        <a href="#">3</a>
+                      </li>
+                      <li>
+                        <a href="#" aria-label="Next">
+                          <span aria-hidden="true">»</span>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>  
             <!-- endbuild -->
+
           </div>
         </div>
       </div>
@@ -904,32 +950,33 @@
 
             <!-- build:pages -->
             <!-- 分页 -->
-            <div class="row">
-              <div class="pagination-fa col-lg-4 col-lg-offset-8 text-right">
-                <ul class="pagination pagination-sm m0">
-                  <li>
-                    <a href="#" aria-label="Previous">
-                      <span aria-hidden="true">«</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">1</a>
-                  </li>
-                  <li>
-                    <a href="#">2</a>
-                  </li>
-                  <li class="active">
-                    <a href="#">3</a>
-                  </li>
-                  <li>
-                    <a href="#" aria-label="Next">
-                      <span aria-hidden="true">»</span>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </div>
+                <div class="row">
+                  <div class="pagination-fa col-lg-4 col-lg-offset-8 text-right">
+                    <ul class="pagination pagination-sm m0">
+                      <li>
+                        <a href="#" aria-label="Previous">
+                          <span aria-hidden="true">«</span>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">1</a>
+                      </li>
+                      <li>
+                        <a href="#">2</a>
+                      </li>
+                      <li class="active">
+                        <a href="#">3</a>
+                      </li>
+                      <li>
+                        <a href="#" aria-label="Next">
+                          <span aria-hidden="true">»</span>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>  
             <!-- endbuild -->
+
           </div>
         </div>
       </div>
@@ -996,32 +1043,33 @@
 
             <!-- build:pages -->
             <!-- 分页 -->
-            <div class="row">
-              <div class="pagination-fa col-lg-4 col-lg-offset-8 text-right">
-                <ul class="pagination pagination-sm m0">
-                  <li>
-                    <a href="#" aria-label="Previous">
-                      <span aria-hidden="true">«</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">1</a>
-                  </li>
-                  <li>
-                    <a href="#">2</a>
-                  </li>
-                  <li class="active">
-                    <a href="#">3</a>
-                  </li>
-                  <li>
-                    <a href="#" aria-label="Next">
-                      <span aria-hidden="true">»</span>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </div>
+                <div class="row">
+                  <div class="pagination-fa col-lg-4 col-lg-offset-8 text-right">
+                    <ul class="pagination pagination-sm m0">
+                      <li>
+                        <a href="#" aria-label="Previous">
+                          <span aria-hidden="true">«</span>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">1</a>
+                      </li>
+                      <li>
+                        <a href="#">2</a>
+                      </li>
+                      <li class="active">
+                        <a href="#">3</a>
+                      </li>
+                      <li>
+                        <a href="#" aria-label="Next">
+                          <span aria-hidden="true">»</span>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>  
             <!-- endbuild -->
+
           </div>
         </div>
       </div>
@@ -1088,32 +1136,33 @@
 
             <!-- build:pages -->
             <!-- 分页 -->
-            <div class="row">
-              <div class="pagination-fa col-lg-4 col-lg-offset-8 text-right">
-                <ul class="pagination pagination-sm m0">
-                  <li>
-                    <a href="#" aria-label="Previous">
-                      <span aria-hidden="true">«</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">1</a>
-                  </li>
-                  <li>
-                    <a href="#">2</a>
-                  </li>
-                  <li class="active">
-                    <a href="#">3</a>
-                  </li>
-                  <li>
-                    <a href="#" aria-label="Next">
-                      <span aria-hidden="true">»</span>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </div>
+                <div class="row">
+                  <div class="pagination-fa col-lg-4 col-lg-offset-8 text-right">
+                    <ul class="pagination pagination-sm m0">
+                      <li>
+                        <a href="#" aria-label="Previous">
+                          <span aria-hidden="true">«</span>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">1</a>
+                      </li>
+                      <li>
+                        <a href="#">2</a>
+                      </li>
+                      <li class="active">
+                        <a href="#">3</a>
+                      </li>
+                      <li>
+                        <a href="#" aria-label="Next">
+                          <span aria-hidden="true">»</span>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>  
             <!-- endbuild -->
+
           </div>
         </div>
       </div>
@@ -1133,6 +1182,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
